# GlTest

./: .gitignore  CMakeLists.txt  awesome_ship.mtl  cool_ship.mtl
src/: CGL.hpp  GLCubemapTexture.cpp  GLCubemapTexture.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVAO.cpp  GLVAO.h  Model.cpp  Model.h  ParticleEmitter.cpp  ParticleEmitter.h  fragment.glsl  main.cpp  particle_fragment.glsl  particle_vertex.glsl  pngloader.cpp  pngloader.hpp  texture_fragment.glsl  vertex.glsl
